# agent-id-python

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_id/: __init__.py  agent.py  cache.py  client.py  crypto.py  did.py  identity.py  signer.py  signing.py
tests/: test_client.py  test_cross_agent_verify.py  test_crypto.py  test_did.py  test_e2e_cross_agent.py  test_identity.py  test_signing.py
