[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-id"
version = "0.1.0"
description = "Python SDK for Open Agent ID — register, sign, and verify AI agent identities"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
