[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-agent-id"
version = "0.1.0"
description = "Python SDK for Open Agent ID — register, sign, and verify AI agent identities"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["agent", "identity", "did", "ed25519", "verification", "ai-agent", "open-agent-id"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cryptography>=41.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://openagentid.org"
Repository = "https://github.com/open-agent-id/agent-id-python"

[tool.hatch.build.targets.wheel]
packages = ["agent_id"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
